--- a/local.yml
+++ b/local.yml
@@ -1,8 +1,3 @@
 ---
-- name: This is a hello-world example
-  hosts: all
-  tasks:
-    - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
-      copy:
-        content: hello worldn
-        dest: /tmp/testfile.txt
+- include:
+    - networking.yml
