--- a/local.yml
+++ b/local.yml
@@ -1,3 +1,6 @@
 ---
-- include:
-    - networking.yml
+- name: This is a hello-world example
+  hosts: all
+  tasks:
+    - include_tasks:
+			- networking.yml
