--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,5 @@
 ---
 - name: This is a hello-world example
   hosts: all
-  tasks:
-    - include_tasks:
-      - networking.yml
+  roles:
+    - docker_devices
