--- a/roles/docker_devices/tasks/networking.yml
+++ b/roles/docker_devices/tasks/networking.yml
@@ -1,3 +1,2 @@
 - name: find interface facts
-  debug: msg=ansible_{{ item }}
-  with_items: "{{ ansible_interfaces }}"
+  debug: msg={{ ansible_interfaces }}
