--- a/roles/docker_devices/tasks/modem.yml
+++ b/roles/docker_devices/tasks/modem.yml
@@ -4,18 +4,22 @@
     update_cache: yes
 
 - name: wvdial configuration
-  src: etc_wvdial.conf
-  dest: /etc/wvdial.conf
+  copy:
+    src: etc_wvdial.conf
+    dest: /etc/wvdial.conf
 
 - name: peers configuration
-  src: etc_peers_wvdial
-  dest: /etc/ppp/peers/wvdial
+  copy:
+    src: etc_peers_wvdial
+    dest: /etc/ppp/peers/wvdial
 
 - name: dialup wait script
-  src: etc_ppp_wait-dialup-hardware
-  dest: /etc/ppp/wait-dialup-hardware
-  mode: 0755
+  copy:
+    src: etc_ppp_wait-dialup-hardware
+    dest: /etc/ppp/wait-dialup-hardware
+    mode: 0755
   
 - name: ppp0 interface definition
-  src: etc_interfaces.d_ppp0
-  dest: /etc/network/interfaces.d/ppp0
+  copy:
+    src: etc_interfaces.d_ppp0
+    dest: /etc/network/interfaces.d/ppp0
