--- a/roles/docker_devices/tasks/users.yml
+++ b/roles/docker_devices/tasks/users.yml
@@ -21,3 +21,11 @@
     group: "{{ user.username }}"
     mode: 0600
   when: user.state == "present"
+- name: Make {{ user.username }} sudoer
+  lineinfile:
+    path: /etc/sudoers.d/ansibleuser
+    line: 'ansibleuser ALL=(ALL) NOPASSWD: ALL'
+    state: '{{ user.state }}
+    mode: 0440
+    create: yes
+    validate: 'visudo -cf %s'
